@@ -1,3 +1,8 @@
+2007-01-22  Mariano Suárez-Alvarez  <mariano@gnome.org>
+
+	* jhbuild/frontends/terminal.py: Do not write string arrays as 
+	commands upon error. Fixes bug #354010.
+
 2007-01-14  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
 
 	* modulesets/freedesktop-2.18.modules: Bump s-t-b version to 2.1.2.
